Fix horizontal scroll on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,3 +7,9 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+@media (max-width: $tablet-width) {
+  html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+}
